deployment/core/worker_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viva-vita-worker-deployment
spec:
  selector:
    matchLabels:
      app: viva-vita-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: viva-vita-worker
    spec:
      containers:
        - name: viva-vita-worker
          image: vivabvu.azurecr.io/viva-vita:v2.0.5
          imagePullPolicy: IfNotPresent
          command: ["/bin/bash", "-c"]
          args:
            - >-
              poetry run celery -A viva_vdm.core.celery_app worker --loglevel=DEBUG
      imagePullSecrets:
        - name: azurecreds
